# sb-types

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/EnumStrApp/: CMakeLists.txt  Main.cpp
examples/SingletonApp/: Main.cpp
examples/StringLiteralApp/: CMakeLists.txt  Main.cpp
examples/TypenameApp/: Main.cpp
include/types/: EnumStr.hpp  Exception.hpp  Result.hpp  Singleton.hpp  StringLiteral.hpp  ThreadPool.hpp  Typename.hpp
src/: ThreadPool.cpp
test/: CMakeLists.txt
test/Singleton/: CMakeLists.txt  TestSingleton.cpp
test/StringLiteral/: CMakeLists.txt  TestStringLiteral.cpp
